# LittleGraphicsEngine

./: .gitignore  LittleGraphicsEngine.pro  README.md  build.py  little_build.py  misc
Window/: Window.pro  main.cpp  openglwindow.h  window.cpp  window.h
doc/: doc.md
engine/: CMakeLists.txt
engine/app/: CMakeLists.txt  main.cpp
engine/engine/: CMakeLists.txt  engine_global.hpp  little_engine.cpp  little_engine.hpp  renderer.cpp  renderer.hpp
engine/engine/glad/include/glad/: glad.h
engine/engine/glad/src/: glad.c
engine/engine/math/: matrix4x4.hpp  point2d.hpp  point3d.hpp  quaternion.hpp  transform.hpp  vector2d.hpp  vector3d.hpp  vector4d.hpp
engine/engine/renderer/: buffermanager.cpp  buffermanager.hpp  bufferobject.cpp  bufferobject.hpp  globject.cpp  globject.hpp  renderer.cpp  renderer.hpp  shaderprogrammanager.cpp  shaderprogrammanager.hpp  texture.cpp  texture.hpp
engine/engine/scene/: camera3d.hpp  scene.cpp  scene.hpp
src/: LittleGraphicsEngine.pro  engine.cpp  engine.h  engine.hpp  glad.c  main.cpp
src/_old/: engine.cpp  engine.hpp
src/_old/graphics/: graphicsengine.cpp
src/_old/scene/: scenemanager.cpp  scenemanager.hpp  scenenode.cpp  scenenode.hpp
src/_old/shaders/: fragment.glsl
src/_old/window/: window.cpp  window.h
src/core/container/: allocator.cpp  allocator.h
src/core/math/: matrix4x4.h  point2d.h  point3d.h  quaternion.h  transform.h  vector2d.h  vector3d.h  vector4d.h
src/core/memory/: build.dart  geometry.h  main.cpp
src/glad/: glad.h
src/graphics/: graphicsengine.cpp  graphicsengine.hpp
src/module/: module.cpp  module.hpp
src/renderer/: buffermanager.cpp  buffermanager.h  bufferobject.cpp  bufferobject.h  globject.cpp  globject.h  renderer.cpp  renderer.h  shaderprogrammanager.cpp  shaderprogrammanager.h  texture.cpp  texture.h
src/scene/: camera3d.h  scene.cpp  scene.h  scenemanager.cpp  scenemanager.hpp  scenenode.hpp
src/shaders/: vertex.glsl
src/window/: openglwindow.cpp  openglwindow.h  window.cpp  window.h
